fix tab-panel-tabs btn-group align, return flex to tile-item-icon

--- a/src/dotnet/UI.Blazor/Components/SettingsPanel/settings-panel.css
+++ b/src/dotnet/UI.Blazor/Components/SettingsPanel/settings-panel.css
@@ -113,7 +113,7 @@ body.hoverable .tile:hover {
     @apply hover:bg-transparent;
 }
 .tile-item-icon {
-    @apply flex-none justify-center;
+    @apply flex-none flex justify-center;
     @apply min-w-10 max-w-10;
     @apply text-icons-01;
 }
