--- a/src/dotnet/UI.Blazor/Components/TabPanel/tab-panel.css
+++ b/src/dotnet/UI.Blazor/Components/TabPanel/tab-panel.css
@@ -70,7 +70,7 @@
     @apply border-b border-bg-04;
 }
 .side-nav .tab-panel-tabs .btn-group {
-    @apply justify-start gap-x-0;
+    @apply items-center justify-start gap-x-0;
     @apply min-h-14;
     @apply px-4;
 }
